; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_BufToK.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_BufToK.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @BufToK(i32* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %26

15:                                               ; preds = %4
  %16 = load i32*, i32** %6, align 8
  %17 = call i32* @BufToBio(i32* %16)
  store i32* %17, i32** %10, align 8
  %18 = load i32*, i32** %10, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i8*, i8** %9, align 8
  %22 = call i32* @BioToK(i32* %18, i32 %19, i32 %20, i8* %21)
  store i32* %22, i32** %11, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = call i32 @FreeBio(i32* %23)
  %25 = load i32*, i32** %11, align 8
  store i32* %25, i32** %5, align 8
  br label %26

26:                                               ; preds = %15, %14
  %27 = load i32*, i32** %5, align 8
  ret i32* %27
}

declare dso_local i32* @BufToBio(i32*) #1

declare dso_local i32* @BioToK(i32*, i32, i32, i8*) #1

declare dso_local i32 @FreeBio(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
